<resources>
    <string name="app_name">Fintech</string>
    <string name="title_history">History</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_profile">Profile</string>
    <string name="title_activity_login">Sign in</string>
    <string name="setting">Setting</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_header_general">General</string>
    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>
    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>
    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>
    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string name="pref_account">Account</string>
    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>
    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>
    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string-array name="multi_select_list_preference_default_value" />
    <string name="pref_title_system_sync_settings">System sync settings</string>
    <string name="logout">Logout</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_new_message_notifications">New message notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_pengajuan">PengajuanActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="jumlah_pinjaman">Jumlah Pinjaman</string>
    <string name="jangka_waktu">Jangka Waktu</string>
    <string name="app_designed_by">Designed by Eajy in China</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_main_settings">Settings</string>
    <string name="tab_title_main_1">Cards</string>
    <string name="tab_title_main_2">Dialogs</string>
    <string name="tab_title_main_3">Widgets</string>
    <string name="main_snack_bar">This is a snack bar</string>
    <string name="main_snack_bar_action">Okay</string>
    <string name="main_card_title">Title goes here</string>
    <string name="main_card_title_short">Title</string>
    <string name="main_card_subtitle">Subtitle here</string>
    <string name="main_card_details">Details here</string>
    <string name="main_card_button_1">ACTION 1</string>
    <string name="main_card_button_2">ACTION 2</string>
    <string name="main_flat_button_1_clicked">Flat Button 1</string>
    <string name="main_flat_button_2_clicked">Flat Button 2</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="main_dialog_simple">Simple dialog</string>
    <string name="main_dialog_simple_title">A simple dialog</string>
    <string name="main_dialog_simple_message">
        "A material metaphor is the unifying theory of a rationalized space and a system of motion. "
        "\nThe material is grounded in tactile reality, inspired by the study of paper and ink, yet technologically advanced and open to imagination and magic."</string>
    <string name="main_dialog_single_choice">Single choice dialog</string>
    <string name="main_dialog_multi_choice">Multi choice dialog</string>
    <string name="main_dialog_progress_title">Progress dialog...</string>
    <string name="main_dialog_progress">Progress dialog</string>
    <string name="main_dialog_data_picker">Date Picker Dialog</string>
    <string name="main_dialog_data_time">Time Picker Dialog</string>
    <string name="main_dialog_bottom">Bottom Dialog</string>
    <string name="main_dialog_fullscreen">Fullscreen Dialog</string>
    <string name="main_popup_menu">Popup Menu</string>
    <string name="main_widget_toggle_button">Toggle Button</string>
    <string name="main_widget_switch">Switch</string>
    <string name="main_widget_check_box">Check Box</string>
    <string name="main_widget_check_box_1">CheckBox 1</string>
    <string name="main_widget_check_box_2">CheckBox 2</string>
    <string name="main_widget_check_box_3">CheckBox 3</string>
    <string name="main_widget_radio">Radio Group and Radio Buttons</string>
    <string name="main_widget_radio_button_1">RadioButton 1</string>
    <string name="main_widget_radio_button_2">RadioButton 2</string>
    <string name="main_widget_radio_button_3">RadioButton 3</string>
    <string name="main_widget_seek_bar">Seek Bar</string>
    <string name="main_widget_progress_bar">Progress Bar</string>
    <string name="main_widget_extract_edit_text">Extract Edit Text</string>
    <string name="main_widget_text_input_layout">Text Input Layout</string>
    <string name="main_widget_edit_text">edit text</string>
    <string name="main_widget_spinner">Spinner</string>
    <string name="main_widget_data_picker">Date Picker</string>
    <string name="main_widget_time_picker">Time Picker</string>
    <string name="nav_header_text">Click to start login activity</string>
    <string name="nav_recycler_view">Recycler View</string>
    <string name="nav_scrolling">Scrolling</string>
    <string name="nav_fullscreen">FullScreen</string>
    <string name="nav_bottom_navigation">Bottom Navigation</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_group_about">About</string>
    <string name="nav_about_this">About Me</string>
    <string name="nav_share">Share</string>
    <string name="nav_feedback">Feedback</string>
    <string name="nav_donate">Donate</string>
    <string name="nav_rate">Rate</string>
    <string name="main_feedback_email">Feedback:MaterialDesign</string>
    <string name="main_not_found_email">Not found email app</string>
    <string name="nav_my_apps">My Apps</string>
    <string name="nav_color">Material Design Color</string>
    <string name="title_activity_scrolling">Scrolling</string>
</resources>